[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Andrew Makar <makarandrew894@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
Flask = "^2.2.2"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
